<resources>
    <string name="app_name">Movie Surfer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_user">Find Movies, TV Shows, and Persons..</string>
    <string name="action_favourite">Favourite</string>
    <string name="image_backdrop">Image Backdrop</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_tv">Popular Tv Show</string>
    <string name="this_week_s_top_movies">This week top Movies pick for you!</string>
    <string name="popular_tv_desc">Get ready for binge watching!</string>
    <string name="total_rate">/10</string>
    <string name="storyline">Storyline</string>
    <string name="genres">Genres</string>
    <string name="plot_summary">Plot Summary</string>
    <string name="details">Details</string>
    <string name="release_date">Release Date</string>
    <string name="country_of_origin">Country of Origin</string>
    <string name="languange_spoken">Languange Spoken</string>
    <string name="original_title">Original Title</string>
    <string name="posters_and_images">Posters and Images</string>
    <string name="inthea">In Theaters %1$s</string>
    <string name="braces"> (%1$s) </string>
    <string name="rating">%1$s/10</string>
    <string name="no_rating">No Rating Information</string>
    <string name="seasons">Seasons</string>
    <string name="season_template"><i>Season %1$d</i></string>
    <string name="season_episode_template">%1$d Episodes</string>
    <string name="season_airing_template">Airing %1$s</string>
    <string name="loading_your_data">Loading Your Data..</string>
    <string name="logo">Logo</string>
    <string name="no_info">No Information</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="people">People</string>
    <string name="you_don_t_have_any_favourite_movie">No Favourite Movie :(</string>
    <string name="no_favourite_tv">No Favourite Tv Show yet :(</string>
</resources>